--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,6 @@
 save-exact = true
-engine-strict = true
+#engine-strict = true
+engine-strict = false
 unsafe-perm = true
 legacy-peer-deps = true
 frozen-lockfile = false
