--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,5 @@
 save-exact = true
-#engine-strict = true
-engine-strict = false
+ngine-strict = true
 unsafe-perm = true
 legacy-peer-deps = true
 frozen-lockfile = false
